<resources>
    <string name="app_name">Pronto</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_registrar">Registrar</string>
    <string name="action_sign_in">Entrar</string>
    <string name="error_invalid_email">Endereço de email invalido</string>
    <string name="error_invalid_password">Esse password é muita curta</string>
    <string name="error_incorrect_password">Esse password esta incorreta</string>
    <string name="error_field_required">Esse campo é obrigatório</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."  </string>
    <string name="nome">"Nome"</string>
    <string name="cpf">"CPF"</string>
    <string name="nascimento">"Data Nascimento"</string>
    <string name="genero">"Sexo"</string>
    <string name="radBtMasculino">"Masculino"</string>
    <string name="radBtFeminino">"Feminino"</string>
    <string name="email">"Email"</string>
    <string name="senha">"Senha"</string>
    <string name="app_id">"1513247955657956"</string>
    <string name="title_activity_usuario">UsuarioActivity</string>
    <string name="title_activity_servico_lista">Serviços</string>

    <string name="tituloServicoLista">Serviços</string>
    <string name="title_activity_usuario_form">Cadastro de Usuário</string>
    <string name="title_activity_servico_form">ServicoForm</string>


    <string name="tituloUsuarioForm">Dados do Usuario</string>

    <string name="fotoUsuarioDesc">Foto do Usuario</string>

    <!--<string name="nome">Nome</string>-->
    <string name="nomeUsuarioHint">Nome</string>
    <string name="fone">Telefone</string>
    <string name="foneUsuarioHint">Telefone</string>
    <string name="site">Site</string>
    <string name="siteHint">www.exemplo.com.br</string>
    <!--<string name="email">Email</string>-->
    <string name="emailHint">E-mail (Opicional)</string>
    <string name="endereco">Endereço</string>
    <string name="enderecoHint">rua, número, bairro</string>

    <string name="salvarDados">Cadastrar</string>

    <string name="title_activity_Usuario_lista">Usuarios</string>

    <string name="novo">Novo</string>
    <string name="mapa">Mapa</string>
    <string name="mais_opcoes">Mais opcões</string>
    <string name="enviarDados">Enviar Dados</string>
    <string name="disciplinas">Receber Dados</string>
    <string name="preferencias">Preferências</string>

    <string name="ligar">Ligar</string>
    <string name="enviarSMS">Enviar SMS</string>
    <string name="verNoMapa">Ver no Mapa</string>
    <string name="navegarSite">Navegar no Site</string>
    <string name="enviarEmail">Enviar E-mail</string>
    <string name="excluir">Excluir</string>
    <string name="title_activity_usuario_list">UsuarioList</string>
    <string name="title_activity_profissional">ProfissionalActivity</string>
    <string name="title_activity_usuario_detalhe">UsuarioDetalheActivity</string>

    <string name="btnEnviarComentario">Enviar comentario</string>
    <string name="btnEnviarAvaliacao">Enviar avaliacao</string>


</resources>
